# cemc-cheat

./: pyproject.toml
src/cemc_cheat/: __init__.py  cli.py  render.py
src/cemc_cheat/sheets/: ecflow.md  slurm.md
